SERVER-8574 contact all config servers before waiting for distributed lock on config upgrade